Extending tests.